# pos-backend

./: .env  .env.example  alembic.ini  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  hashing.py  security.py
app/db/: .base.py.kate-swp  base.py  session.py
app/models/: payment.py  transaction.py  user.py
app/services/: auth_service.py
docs/: architecture.md  setup_guide.md
infra/: __init__.py
infra/migrations/: env.py
infra/migrations/versions/: 47908e2218aa_initial_schema.py  6bac7c8206d7_schema_with_tables.py
